<resources>
    <string name="app_name"
            translatable="false">Runinga
    </string>

    <!-- Workout buttons -->
    <string name="workout_button_start">Start</string>
    <string name="workout_button_stop">Stop</string>
    <string name="workout_button_pause">Pause</string>

    <!-- End workout alert -->
    <string name="end_workout_alert_title">End workout</string>
    <string name="end_workout_alert_message">Are you sure you want end training?</string>
    <string name="end_workout_alert_positive_button">Yes</string>
    <string name="end_workout_toast_workout_ended">Workout ended</string>

    <!-- Main menu -->
    <string name="main_menu_title">MainMenu</string>
    <string name="main_menu_quick_start">Quick Start</string>
    <string name="main_menu_virtual_rival">Virtual Rival</string>
    <string name="main_menu_history">History</string>
    <string name="main_menu_settings">Settings</string>
    <string name="workout_label_distance">Distance</string>
    <string name="workout_value_distance_pattern"
            translatable="false">%1$s km
    </string>
    <string name="workout_value_distance_default"
            translatable="false">0 km
    </string>
    <string name="gps_alert_title">GPS disabled</string>
    <string name="gps_alert_message">Please turn on GPS for better experience</string>
    <string name="pre_rival_workout_start">Start workout</string>
    <string name="pre_rival_workout_pace_unit"
            translatable="false">min/km
    </string>
    <string name="pre_rival_workout_pace">Pace</string>
    <string name="workout_label_distance_to_rival">Distance to rival</string>
    <string name="pre_workout_mode_pace_label">Pace</string>
    <string name="pre_workout_mode_distance_label">Distance / Time</string>
    <string name="pre_workout_switch_mode_label">Distance / Time</string>
    <string name="pre_workout_start_button">Start training</string>
    <string name="pre_workout_pace_label">Pace (mm:ss)</string>
    <string name="pre_workout_time_label">Time (HH:mm)</string>
    <string name="pre_workout_distance">Distance (km)</string>
    <string name="pre_workout_provide_inputs">Provide inputs</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_apply">Apply</string>
    <string name="settings_audio_frequency">Audio frequency</string>
    <string name="settings_timer_delay_value">Timer delay value</string>
    <string name="settings_path_color">Path color</string>
    <string name="settings_zoom">Zoom</string>
    <string name="rival_pace_mode_type">Pace</string>
    <string name="rival_distance_per_time_mode_type">Distance per time</string>
    <string name="rival_free_mode_type">Free</string>
    <string name="history_date">Date</string>
    <string name="history_workout_mode">Mode</string>
    <string name="history_time">Time</string>
    <string name="history_distance">Distance</string>

</resources>
