<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenu">

    <GridLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:columnCount="2"
                android:rowCount="2">

        <Button android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_marginBottom="-2dp"
                android:text="@string/main_menu_quick_start"/>

        <Button android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_marginBottom="-2dp"
                android:text="@string/main_menu_virtual_rival"/>

        <Button android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_marginTop="-2dp"
                android:text="@string/main_menu_history"/>

        <Button android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_marginTop="-2dp"
                android:text="@string/main_menu_settings"/>

    </GridLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
