<GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <TextView
            android:text="@string/settings_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/textView2"/>
    <TextView
            android:text="@string/settings_path_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/textView3"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
    <TextView
            android:text="@string/settings_timer_delay_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:id="@+id/textView4"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
    <TextView
            android:text="@string/settings_audio_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:id="@+id/textView5"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/settings_zoom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/settings_path_color"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/settings_timer_delay"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/settings_audio_reminders_freq"
            android:layout_gravity="center"/>

    <Button
            android:text="@string/settings_apply"
            android:layout_gravity="fill"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_rowSpan="2"
            android:layout_columnSpan="2"
            android:layout_marginTop="40dp"

            android:id="@+id/settings_apply"/>
</GridLayout>



